crates/styx-tree/src/snapshots/styx_tree__diagnostic__tests__invalid_escape_diagnostic.snap
---
source: crates/styx-tree/src/diagnostic.rs
expression: stripped
---
Error: invalid escape sequence '\q'
   ╭─[ test.styx:1:12 ]
   │
 1 │ name "hello\qworld"
   │            ─┬  
   │             ╰── invalid escape
   │ 
   │ Help: valid escapes are: \\, \", \n, \r, \t, \uXXXX, \u{X...}
───╯
